src/objects/CRM_OrderItemStatus_Event__e.object
<CustomObject>
    <description>Platform event invoked from Kafka to Salesforce upon Order inserts and updates</description>
    <fields>
        <fullName>author__c</fullName>
        <label>author</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changedQuantity__c</fullName>
        <label>changedQuantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>deliveryNumber__c</fullName>
        <label>deliveryNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entityType__c</fullName>
        <label>entityType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventDate__c</fullName>
        <label>eventDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSourceID__c</fullName>
        <label>eventSourceID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSource__c</fullName>
        <label>eventSource</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceDate__c</fullName>
        <label>invoiceDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceNumber__c</fullName>
        <label>invoiceNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBundleItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBundleItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>itemID__c</fullName>
        <label>itemID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lotExpirationDate__c</fullName>
        <label>lotExpirationDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lotNumber__c</fullName>
        <label>lotNumber</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lotNumbers__c</fullName>
        <label>lotNumbers</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <label>metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>operation__c</fullName>
        <label>operation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderNumber__c</fullName>
        <label>orderNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentItemID__c</fullName>
        <label>parentItemID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentSystemOfOriginID__c</fullName>
        <label>parentSystemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scheduledShipDate__c</fullName>
        <label>scheduledShipDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serialNumber__c</fullName>
        <label>serialNumber</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>serialNumbers__c</fullName>
        <label>serialNumbers</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>shippedDate__c</fullName>
        <label>shippedDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippedQuantity__c</fullName>
        <label>shippedQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shippingProvider__c</fullName>
        <label>shippingProvider</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuBundle__c</fullName>
        <label>skuBundle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sku__c</fullName>
        <label>sku</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOriginID__c</fullName>
        <label>systemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOrigin__c</fullName>
        <label>systemOfOrigin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total__c</fullName>
        <label>total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trackingNumber__c</fullName>
        <label>trackingNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CRM OrderItemStatus Event - In</label>
    <pluralLabel>CRM OrderItemStatus Events - In</pluralLabel>
</CustomObject>